@@ -1,6 +1,9 @@
 noinst_LTLIBRARIES = libfreq_filt.la
 
 libfreq_filt_la_SOURCES = \
+	freqfilt.c \
+	pfreqfilt.h \
+	fwfft.c \
 	im_phasecor_fft.c \
 	freq_dispatch.c \
 	im_disp_ps.c \
