@@ -32,6 +32,7 @@
 - vipsthumbnail has a --crop option
 - remove video4linux1 code, it was useless on all modern linuxes
 - redone freq filter builders as classes
+- redone im_fwfft() as a class
 
 20/11/13	started 7.36.5
 - better cache sizing in unbuffered sequential mode
